syntax = "proto3";
package serverUser;

message ResultEmpty {
}

// TODO: 公共部分  -----------------------------------------------------------
// 分页
message PageInfo {
  int32 page = 1;
  int32 pageSize = 2;
  string orderKey = 3;
}

// 默认输出
message Result {
  int32 code = 1;
  string msg = 2;
  map<string, string> header = 3;
  bytes body = 4;
}

// ID
message ReqId {
  int64 id = 1;
}

// TODO: 用户基础操作部分
message ReqPass {
  string password = 1;
  UserList userList = 2;
}

// 登录用户
message User {
  int64 id = 1;
  int32 created_at = 2;
  int32 updated_at = 3;
  string pass = 4;    //密码
  string encrypt = 5;  //签名密钥
  int32 is_real = 6;  //实名状态 1已实名 2未实名
  enum Status {
    NORMAL = 0;
    LOCK = 1;
  }
  Status state = 7; //状态
}

// 用户资料
message UserData {
  int64 id = 1;
  string avatar = 2;  // 用户图像
  bool sex = 3;  // 性别
  string source = 4;  // 注册来源 1 H5 2 WEB 3 APP 4 微信公众号 5 微信小程序 6 支付宝 7 字节跳动
  string nick_name = 5;  // 昵称
  string real_name = 6;  // 真实姓名
  string id_card = 7;    // 证件号码
  int32 real_type = 8;    // 实名认证来源
}

// 登录用户
message UserList {
  int64 id = 1;
  int32 created_at = 2;
  int32 updated_at = 3;
  int64 uid = 4; // 所属用户 ID
  int32 type = 5;  // 用户类型 0系统ID 1用户名 2手机号 3微信 4支付宝 5字节跳动
  string user = 6; // 用户名
}

// 用户登录记录
message UserLogin {
  int64 id = 1;
  int32 created_at = 2;
  int32 updated_at = 3;
  int64 uid = 4; //用户ID
  string platform = 5; //登录来源
  string device = 6; //设备标识
  string ip = 7;  //IP
  string token = 8;  //记录 JWF
}

message ResUserLogin {
  repeated UserLogin list = 1;
  int32  count = 2;
}

// 用户邮寄地址
message UserMailing {
  int64 id = 1;
  int32 created_at = 2;
  int32 updated_at = 3;
  int32 default = 4; // 是否为默认
  int32 province = 5; // 所在省
  int32 city = 6; // 所在市
  int32 county = 7; // 所在县
  string address = 8; // 详细地址
  string name = 9; // 收货人姓名
  string mobile = 10; // 联系电话
}

message ResUserMailing {
  repeated UserMailing list = 1;
  int32  count = 2;
}

// TODO: 地址库操作
// 中国 区域查询
message UserRegion {
  int32 id = 1;
  int32 parent_id = 4; //父地区
  string name = 5; //名称
  repeated double loc = 6;  //经纬度
}

message ResUserRegionName {
  int32 province = 1;
  int32 city = 2;
  int32 county = 3;
}

message ResUserRegion {
  repeated UserRegion list = 1;
  int32  count = 2;
}

service userSys {
  // TODO: 用户 登录操作
  rpc Login(ReqPass) returns (UserData) {}  // 用户登录
  rpc LoginOut(UserLogin) returns (ResultEmpty) {}  // 用户退出
  rpc LoginData(UserLogin) returns (ResultEmpty) {} // 设置用户登录记录
  // TODO: 用户信息
  rpc UserDataData(UserData) returns (UserData) {} // 获取用户详细信息
  rpc UserListData(UserList) returns (UserList) {} // 获取用户绑定信息
  rpc UserLoginList(UserLogin) returns (ResUserLogin) {} // 获取用户登录设备列表
  // 用户邮寄信息
  rpc UserMailingData(UserMailing) returns (UserMailing) {} // 获取用户邮寄信息
  rpc UserMailingList(UserMailing) returns (ResUserMailing) {} // 获取用户邮寄信息列表
  // TODO: 用户 地区查询
  rpc UserRegionList(UserRegion) returns (ResUserRegion) {} // 查询地区所以下级数据
  rpc UserRegionData(UserRegion) returns (UserRegion) {} // 查询地区数据
  rpc UserRegionName(ResUserRegionName) returns (Result) {} // 查询地区名字拼接
  rpc UserRegionLngLat(UserRegion) returns (ResUserRegion) {} // 根据经纬度返回地区信息
}